# EngineeringThesisOPCUA

./: CMakeLists.txt  README.md
src/: main.cpp
src/wfa/: WFA_client.cpp  WFA_server.cpp
src/wfa/WFA_client/: ClientManager.cpp  ClientManager.h  DataRecorder.cpp  DataRecorder.h  SubscribtionManager.cpp  SubscribtionManager.h  client_properties.h
src/wfa/WFA_server/: EventManager.cpp  EventManager.h  OPCMessage.cpp  OPCMessage.h  ServerFactory.cpp  ServerFactory.h  server_properties.h
src/wfa/tests/: CMakeLists.txt  test-transition-server.cpp
